First draft - Designsn

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,10 @@
-<h1>Welcome to Blint!</h1>
+<br/><h1>Blint - Homepage</h1>
+<br/>
+<div class="text-center">
+<img src="/assets/bot1_edited.png"/>
+<div class="bot-notifications">
+	<%= session[:not] %>
+</div>
+</div>
 
 
