--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,8 @@
   <%= javascript_include_tag 'application' %>
   <%= javascript_include_tag "http://localhost:9292/faye.js"%>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script src="http://timeago.yarp.com/jquery.timeago.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <%= csrf_meta_tags %>
   <script>
     var client;
@@ -17,6 +19,7 @@
   </script>
 </head>
 <body>
+  <div class="container">
 	<nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -26,7 +29,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Blint</a>
+      <a class="navbar-brand" href="#"></a>
     </div>
     <% if session[:user_id] %>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -44,6 +47,6 @@
   </div><!-- /.container-fluid -->
 </nav>
 <%= yield %>
-
+</div>
 </body>
 </html>
