--- a/app/views/users/requests.html.erb
+++ b/app/views/users/requests.html.erb
@@ -1,3 +1,79 @@
-<% @requests.each do |req|%>
-<p><%= req.user.name %><br/><%= link_to "Accept Request", accept_request_path(:id => req.id)%></p><br/>
-<% end %> 
+
+<div class="row">
+<div class="well profile panel panel-default filterable col-md-8 col-md-offset-2">
+            <div class="panel-heading">
+                <h3 class="panel-title">Requests</h3>
+                <div class="pull-right">
+                    <button class="btn btn-default btn-xs btn-filter"><span class="glyphicon glyphicon-filter"></span> Filter</button>
+                </div>
+            </div>
+            <table class="table text-center">
+                <thead>
+                    <tr class="filters">
+                        <th><input type="text" class="form-control" placeholder="" disabled></th>
+                        <th><input type="text" class="form-control" placeholder="" disabled></th>
+                        <th><input type="text" class="form-control" placeholder="" disabled></th>
+                    </tr>
+                </thead>
+                <tbody>
+                	<% @requests.each do |req|%>
+                    <tr>
+                        <td><%= req.id %></td>
+                        <td><%= req.user.name %></td>
+                        <td>
+                        	<%= link_to "", accept_request_path(:id => req.id), :class => "fa fa-circle green-font"%>
+                        	<%= link_to "", reject_request_path(:id => req.id), :class => "fa fa-circle red-font"%>
+                        </td>
+                    </tr>
+                    <% end %>
+                </tbody>
+            </table>
+        </div>
+</div>
+<script type="text/javascript">
+	/*
+Please consider that the JS part isn't production ready at all, I just code it to show the concept of merging filters and titles together !
+*/
+$(document).ready(function(){
+    $('.filterable .btn-filter').click(function(){
+        var $panel = $(this).parents('.filterable'),
+        $filters = $panel.find('.filters input'),
+        $tbody = $panel.find('.table tbody');
+        if ($filters.prop('disabled') == true) {
+            $filters.prop('disabled', false);
+            $filters.first().focus();
+        } else {
+            $filters.val('').prop('disabled', true);
+            $tbody.find('.no-result').remove();
+            $tbody.find('tr').show();
+        }
+    });
+
+    $('.filterable .filters input').keyup(function(e){
+        /* Ignore tab key */
+        var code = e.keyCode || e.which;
+        if (code == '9') return;
+        /* Useful DOM data and selectors */
+        var $input = $(this),
+        inputContent = $input.val().toLowerCase(),
+        $panel = $input.parents('.filterable'),
+        column = $panel.find('.filters th').index($input.parents('th')),
+        $table = $panel.find('.table'),
+        $rows = $table.find('tbody tr');
+        /* Dirtiest filter function ever ;) */
+        var $filteredRows = $rows.filter(function(){
+            var value = $(this).find('td').eq(column).text().toLowerCase();
+            return value.indexOf(inputContent) === -1;
+        });
+        /* Clean previous no-result if exist */
+        $table.find('tbody .no-result').remove();
+        /* Show all rows, hide filtered ones (never do that outside of a demo ! xD) */
+        $rows.show();
+        $filteredRows.hide();
+        /* Prepend no-result row if all rows are filtered */
+        if ($filteredRows.length === $rows.length) {
+            $table.find('tbody').prepend($('<tr class="no-result text-center"><td colspan="'+ $table.find('.filters th').length +'">No result found</td></tr>'));
+        }
+    });
+});
+</script>
