--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -44,6 +44,24 @@ body{
 .fa-circle{
   color: rgb(90, 203, 90);
 }
+#messages-main {
+  position: relative;
+  height: 650px;
+}
+.ms-body{
+  height: 550px;
+}
+.lv-body{
+  overflow: scroll;
+  height: 500px;
+}
+.table-striped td{
+  padding-top: 5px;
+}
+.table-striped a{
+  color: black;
+  font-size: 14px;
+}
 /*body{
 	background-color: #E96D65 !important;
 	color: #ffe8e7 !important;
