--- a/app/views/messages/published_chatbox.html.erb
+++ b/app/views/messages/published_chatbox.html.erb
@@ -1,29 +1,16 @@
 <div class="chat_container">
 </div>
 <div id="wrapper">
-  <div class="session-status-container">
-    Published messages
+  <div class="session-status-container text-center">
+    <h3><%= @request.title %></h3>
+    Session owner: <%= @request.user.name %><br/>
+    Coach: <%= User.find(@request.receiver_id).name %><br/>
   </div>
   
       <div class="message-container">
         <br/>
-        <div class="message-north">
-          <ul class="message-user-list">
-            <% @requests.each do |request| %>
-            <li class="row">
-              <a href="/published_message/<%=request.id%>" class="requests" data-id="<%=request.id%>">
-                <span class="user-img"></span>
-                <% if @client %>
-                  <span class="user-title"><%=User.find(request.receiver_id).name%></span>
-                  <p class="user-desc"><%=User.find(request.receiver_id).email%></p>
-                <% else %>
-                  <span class="user-title"><%=request.user.name%></span>
-                  <p class="user-desc"><%=request.user.email%></p>
-                <% end %>
-              </a>
-            </li><br/>
-            <% end %>
-          </ul>
+        <div class="message-north closed-thread">
+          
           <div class="message-thread">
             <% @request.messages.each do |m| %>
             <% if current_user.name == m.sender_name %>
@@ -39,96 +26,6 @@
           </div>
           
         </div>
-        <div class="message-south">
-          <div class="typing-container"><div class="typing-sign">Now typing....</div></div>
-          <form id="new_message_form" data-request="<%=@request.id%>">
-          <textarea cols="20" rows="3" id="message" name="message"
-            <% if @request.status == "Closed" %>
-            disabled = "disabled"
-            <% end %>
-          ></textarea>
-          <input type="submit" value="Send" class="btn btn-primary pull-right" style="
-          height: 85px;">
-          </form>
-        </div>
       </div>
     </div>
 
-<script type="text/javascript">
-$(document).ready(function(){
-  var user_flag = 0;
-
-  //Subscribe to the channel
-  var public_subscription = client.subscribe("/messages/<%=@request.id%>", function(data) {
-      if(data.signal == "typing" && user_flag == 0){
-        console.log("here");
-        $(".typing-sign").show();
-        setTimeout(function(){ $(".typing-sign").hide() }, 2000);
-      }
-      else if(data.msg){
-        var new_msg = "";
-        if(data.sender == "<%= current_user.name%>"){
-          new_msg+= '<div class="message bubble-right">';
-        }
-        else{
-          new_msg+= '<div class="message bubble-left">';
-        }
-        new_msg += '<label class="message-user">'+data.sender+'</label><label class="message-timestamp">'+$.timeago(data.msg.created_at)+'</label><p>'+data.msg.raw_text+'</p></div>'
-        $(".message-thread").append(new_msg);
-        // $('<p></p>').html(data.sender + ": " + data.msg).appendTo('#chat_room');
-      }
-    });
-
-  //Sending a message and publishing it
-  $('#new_message_form').submit(function(){
-      var request_id = $(this).data('request');
-      $.ajax({
-        url: "/new-message",
-        type: "POST",
-        data: {
-          msg: $('#message').val(), 
-          request_id: request_id, 
-          sender_id: "<%=current_user.id%>"},
-        success: function(data){
-          // Publish the message to the public channel after a successful entry to the database
-          client.publish("/messages/"+request_id, {
-            msg: data,
-            sender: "<%=current_user.name%>"
-          });
-          // Clear the message box
-          $('#message').val('');
-        }
-      });
-      // Don't actually submit the form, otherwise the page will refresh.
-      return false;
-    });
-
-  //Typing event
-  $("#message").keyup(function(){
-      if($(".typing-sign").css('display') == "none"){
-        client.publish("/messages/<%=@request.id%>", {
-                signal: "typing"
-              });
-        user_flag = 1;
-      }
-      setTimeout(function(){ user_flag = 0; }, 1000);
-  });
-
-
-  //Terminate sessions via Ajax
-  $(".terminate-button").click(function(){
-    $.ajax({
-      url: "/close_session/<%=@request.id%>",
-      method: "GET",
-      success: function(data){
-        <% if current_user.role == "Client" %>
-        $(".session-status-container").html("Request to terminate this session has been registered");
-        <% else %>
-        $(".session-status-container").html("Session Terminated successfully!");
-        <% end %>
-      }
-    })
-  });
-
-});
-</script>
