--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -62,6 +62,31 @@ body{
   color: black;
   font-size: 14px;
 }
+.green-font{
+  color: green;
+}
+.red-font{
+  color: red;
+}
+.nav > li > a{
+  display: -webkit-inline-box;
+}
+a{
+  text-decoration: none !important;
+}
+.message-count{
+  display: table-cell;
+  position: absolute;
+  right: 10px;
+  top: 17px;
+  padding: 0px 7px;
+  border-radius: 15px;
+  background-color: coral;
+  color: white;
+}
+.tmn-counts{
+    margin-right: -20px;
+}
 /*body{
 	background-color: #E96D65 !important;
 	color: #ffe8e7 !important;
