--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,6 +62,28 @@
         <li><a href="/sessions"></a></li>
         <% else %>
         <li><%#= link_to('Logout', destroy_user_session_path, :method => :delete) %></li>
+        <li class="pull-right">
+          <a  href="/messages">
+            <div class="tm-message">
+            <i class="fa fa-envelope-square" style="font-size:26px;"></i> 
+            <% if current_user.unread_messages_count > 0 %>
+            <i class="tmn-counts message-count-main message-count">
+              <%=current_user.unread_messages_count%>
+            </i>
+            <% end %>
+            </div>
+          </a>
+          <a  href="/requests">
+            <div class="tm-message">
+            <i class="fa fa-user-plus" style="font-size:26px;"></i> 
+            <% if current_user.pending_requests_count > 0 %>
+            <i class="tmn-counts request-count">
+              <%=current_user.pending_requests_count%>
+            </i>
+            <% end %>
+          </div>
+          </a>
+        </li>
         <li class="dropdown pull-right">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <% if current_user.avatar.url %>
