--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
   <%= javascript_include_tag "http://localhost:9292/faye.js"%>
   <!-- // <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script> -->
   <script src="http://timeago.yarp.com/jquery.timeago.js"></script>
+  <script type="text/javascript" src="/assets/countdown.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/r/dt/jq-2.1.4,dt-1.10.9/datatables.min.css"/>
  
@@ -124,5 +125,6 @@
 <div class="container">
 <%= yield %>
 </div>
+
 </body>
 </html>
